# distribute

./: .gitignore  404.html  Cargo.toml  README.md  admin_setup.html  apptainer-input-files.html  apptainer-introduction.html  apptainer-mutable-filesystem.html  apptainer-packaging-solvers.html  apptainer-running-locally.html  apptainer-storing-results.html  apptainer.html  capabilities.html  commands.html  compute_node_setup.html  configuration.html  distribute-jobs.yaml  head_node_setup.html  index.html  install.html  introduction.html  justfile  machines.html  overview.html  print.html  python-build-scripts.html  python-execution-scripts.html  python-full-example.html  python-input-files.html  python-storing-results.html  python.html  python_api.html  searchindex.js  searchindex.json  update_python_version.sh
.github/workflows/: gh-pages.yml  paper-compile.yml  python.yml
docs/: README.md  book.toml
docs/figs/: architecture.xcf
docs/src/: SUMMARY.md  admin_setup.md  apptainer-building  apptainer-input-files.md  apptainer-introduction.md  apptainer-mutable-filesystem.md  apptainer-packaging-solvers.md  apptainer-running-locally.md  apptainer-storing-results.md  apptainer.md  capabilities.md  commands.md  compute_node_setup.md  configuration.md  head_node_setup.md  install.md  introduction.md  machines.md  overview.md  python-build-scripts.md  python-execution-scripts.md  python-full-example.md  python-input-files.md  python-storing-results.md  python.md  python_api.md
examples/apptainer/: build.apptainer  build.py  dataset_sometimes.csv  distribute-jobs.yaml
examples/python/: distribute-jobs.yaml
examples/singularity/: build.singularity  dataset_always.csv  distribute-jobs.yaml  run.py
install/: distribute-compute.service  distribute-server.service  setup-root.sh  setup.sh  update.sh
paper/: paper.bib  paper.md
pybind/: .readthedocs.yaml  Cargo.toml  MANIFEST.in  README.md  distribute_compute_config.pyi  pyproject.toml
pybind/docs/source/: api.rst  conf.py  example.rst  index.rst
pybind/src/: lib.rs  validate_bindings.py  wrap.rs
python/: .buildinfo  api.html  example.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
python/_sources/: example.rst.txt  index.rst.txt
src/: add.rs  cli.rs  client.rs  config.rs  error.rs  kill.rs  lib.rs  logging.rs  main.rs  node_status.rs  pause.rs  prelude.rs  pull.rs  resume.rs  run_local.rs  server.rs  server_status.rs  slurm.rs  status.rs  template.rs  transport.rs
src/client/: execute.rs  mod.rs  utils.rs
src/config/: apptainer.rs  common.rs  docker.rs  hashing.rs  mod.rs  podman.rs  python.rs  requirements.rs  singularity.rs
src/pause/: mod.rs  unix.rs
src/protocol/: built.rs  compiling.rs  executing.rs  mod.rs  prepare_build.rs  send_files.rs  uninit.rs
src/protocol/send_files/: mod.rs  receiver.rs  sender.rs
src/server/: job_pool.rs  matrix.rs  mod.rs  node.rs  pool_data.rs  schedule.rs  storage.rs  user_conn.rs
static/: example-jobs-apptainer.yaml  example-jobs-docker.yaml  example-jobs-python.yaml  example-jobs-singularity.yaml  example-jobs.yaml  example-nodes.yaml
tests/: apptainer_local.rs  cancel_job.rs  check_deallocate_jobs.rs  check_pull.rs  docker_square.rs  failed_keepalive.rs  many_jobsets_single_sif.rs
tests/apptainer_local/: apptainer_local.apt  build.sh  distribute-jobs.yaml  hello.txt  run.py
tests/apptainer_local/output/_bind_path_0/: file1.txt
tests/apptainer_local/output/archived_files/job_1/: simulated_output.txt
tests/apptainer_local/output/archived_files/job_2/: job_2_output.txt  simulated_output.txt
tests/cancel_job/: distribute-jobs.yaml  distribute-nodes.yaml
tests/check_deallocate_jobs/: distribute-nodes.yaml
tests/check_pull/: distribute-jobs.yaml
tests/docker_square/: Dockerfile  distribute-jobs.yaml  distribute-nodes.yaml  main.py  update_docker.sh
tests/failed_keepalive/: distribute-jobs.yaml  distribute-nodes.yaml
tests/filter_files/: README.md
tests/many_jobsets_single_sif/: distribute-jobs.yaml
tests/pull_large_file/: distribute-jobs.yaml  distribute-nodes.yaml
tests/python_sleep/: sleep30s.py  sleep500s.py
