[package]
name = "distribute"
version = "0.11.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0.31"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
serde_json = "^1"
derive_more = "0.99.16"
bincode = { version = "1.3.3", optional = true }
walkdir = { version = "2.3.2", optional = true }
tokio = { version = "1.21.0", features = ["rt", "macros", "net", "io-util", "time", "sync", "fs", "process", "rt-multi-thread"], optional = true } 
chrono = { version = "0.4.19", optional = true }
fern = { version = "0.6.0", optional = true }
log = { version = "0.4.14", optional = true }
futures = { version = "0.3.16", optional = true}
nix = { version = "0.22.0", optional = true }
num_cpus = { version = "1.13.0", optional = true }
tokio-stream = { version = "0.1.7", features = ["fs"], optional = true}
sha1 = { version = "0.6.0", optional = true }
signal-hook = { version = "0.3.9", default_features = false, optional = true }
regex = { version = "1.5.4", optional = true }
structopt = { version = "0.3.25", optional = true }

[dependencies.matrix-notify]
default_features = false
git = "https://github.com/fluid-Dynamics-Group/matrix-notify"
rev = "1291ebceb693fc368ffe64b1bd3d13c40ecbca68"

[dependencies.pyo3]
#version = "0.16.5" 
git = "https://github.com/PyO3/pyo3"
rev = "2b6d59f8898ed579a7cbd1c538f0fe2db65c659b"
features = ["extension-module"]
optional = true

[dev-dependencies]
# one of the executing.rs tests changes the
# current working directory which can really mess with the state
# of some other tests that create / read files. Cant currently
# use sealed_test since we use tokio, I believe
serial_test = "0.9.0"

[features]
default = ["cli"]
cli = [
	"structopt", 
	"regex", 
	"signal-hook", 
	"sha1", 
	"tokio-stream", 
	"num_cpus", 
	"nix", 
	"futures",
	"log",
	"fern",
	"chrono",
	"tokio",
	"walkdir",
	"bincode",
	"matrix-notify/cli"
]
python = ["pyo3", "matrix-notify/userid"]

[[bin]]
name = "distribute"
required-features = ["cli"]
