[package]
name = "distribute"
version = "0.13.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0.38"
serde = { version = "1.0.151", features = ["derive"] }
serde_yaml = "0.9.16"
serde_json = "^1"
derive_more = "0.99.16"
bincode = { version = "1.3.3", optional = true }
walkdir = { version = "2.3.2", optional = true }
tokio = { version = "1.23.0", features = ["rt", "macros", "net", "io-util", "time", "sync", "fs", "process", "rt-multi-thread"], optional = true } 
chrono = { version = "0.4.23", optional = true }
futures = { version = "0.3.25", optional = true}
nix = { version = "0.26.1", optional = true }
num_cpus = { version = "1.15.0", optional = true }
tokio-stream = { version = "0.1.11", features = ["fs"], optional = true}
sha1 = { version = "0.10.5", optional = true }
signal-hook = { version = "0.3.9", default_features = false, optional = true }
regex = { version = "1.7.0", optional = true }
clap = { version = "4.0.32", features = ["derive"], optional = true }
base16 = "0.2.1"
tracing = { version = "0.1.37", optional = true }
tracing-subscriber = { version = "0.3.16", optional = true }
getset = "0.1.2"

[dependencies.matrix-notify]
default_features = false
git = "https://github.com/fluid-Dynamics-Group/matrix-notify"
rev = "f3d4def0b1386ab5ee686857a029fa5716151a00"

[dependencies.pyo3]
version = "0.17.3" 
features = ["extension-module"]
optional = true

[dev-dependencies]
# one of the executing.rs tests changes the
# current working directory which can really mess with the state
# of some other tests that create / read files. Cant currently
# use sealed_test since we use tokio, I believe
serial_test = "0.10.0"

[features]
default = ["cli"]
cli = ["clap", "regex", "signal-hook", "sha1", "tokio-stream", "num_cpus", "nix", "futures", "chrono", "tokio", "walkdir", "bincode", "matrix-notify/cli", "tracing", "tracing-subscriber"]
python = ["pyo3", "matrix-notify/userid"]
config = ["matrix-notify/userid"]

[[bin]]
name = "distribute"
required-features = ["cli"]

[profile.release]
debug = true
