[package]
name = "pybind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "distribute_compute_config"
crate-type = ["cdylib"]

[dependencies]

[dependencies.distribute]
path = "../"
default_features=false
features = ["python"]

[dependencies.pyo3]
#version = "0.16.5" 
git = "https://github.com/PyO3/pyo3"
rev = "2b6d59f8898ed579a7cbd1c538f0fe2db65c659b"
features = ["extension-module"]
